Update RGB processing to load bands at 60m resolution, minimizing memory usage and improving efficiency.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -411,21 +411,21 @@
         "# ======================================================================\n",
         "# RGB Processing - Separate from NDSI\n",
         "# ======================================================================\n",
-        "# Loads RGB bands at 20m resolution to reduce memory/container load\n",
+        "# Loads RGB bands at 60m resolution to minimize memory/container load\n",
         "\n",
         "def load_rgb_scene(href, x_slice, y_slice):\n",
         "    \"\"\"\n",
-        "    Load RGB bands (B02, B03, B04) at 20m resolution for a single scene.\n",
-        "    Uses 20m bands to reduce data volume and container load.\n",
+        "    Load RGB bands (B02, B03, B04) at 60m resolution for a single scene.\n",
+        "    Uses 60m bands for minimal data volume and container load.\n",
         "    \"\"\"\n",
         "    scene_name = os.path.basename(href.rstrip(\"/\"))\n",
         "    \n",
-        "    # Load 20m RGB bands (lower resolution = less data)\n",
-        "    ds_rgb = xr.open_zarr(href, group=\"/measurements/reflectance/r20m\")[[\"b02\", \"b03\", \"b04\"]]\n",
+        "    # Load 60m RGB bands (lowest resolution = minimal data)\n",
+        "    ds_rgb = xr.open_zarr(href, group=\"/measurements/reflectance/r60m\")[[\"b02\", \"b03\", \"b04\"]]\n",
         "    ds_rgb = ds_rgb.sel(x=x_slice, y=y_slice)\n",
         "    \n",
-        "    # Load SCL for cloud masking (already 20m)\n",
-        "    ds_scl = xr.open_zarr(href, group=\"/conditions/mask/l2a_classification/r20m\")[[\"scl\"]]\n",
+        "    # Load SCL for cloud masking at 60m\n",
+        "    ds_scl = xr.open_zarr(href, group=\"/conditions/mask/l2a_classification/r60m\")[[\"scl\"]]\n",
         "    ds_scl = ds_scl.sel(x=x_slice, y=y_slice)\n",
         "    \n",
         "    return xr.merge([ds_rgb, ds_scl])\n",
