Refactor single scene processing logic to allow selection of specific scene by name, enhancing flexibility in scene handling.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -106,7 +106,8 @@
       "outputs": [],
       "source": [
         "# === Configuration ===\n",
-        "SINGLE_SCENE_MODE = True  # Toggle: True = only first scene, False = all scenes\n",
+        "SINGLE_SCENE_MODE = True  # Toggle: True = specific scene, False = all scenes\n",
+        "SINGLE_SCENE_NAME = \"S2A_MSIL2A_20250928T132241_N0511_R124_T26WPS_20250928T192912.zarr\"\n",
         "\n",
         "# STAC Search\n",
         "catalog = pystac_client.Client.open(\"https://stac.core.eopf.eodc.eu\")\n",
@@ -135,9 +136,15 @@
         "hrefs = [item.assets[\"product\"].href for item in valid_items]\n",
         "\n",
         "# Apply single scene toggle\n",
-        "if SINGLE_SCENE_MODE and hrefs:\n",
-        "    hrefs = [hrefs[0]]\n",
-        "    print(f\"\\n[SINGLE_SCENE_MODE] Using only first scene: {os.path.basename(hrefs[0])}\")\n",
+        "if SINGLE_SCENE_MODE:\n",
+        "    # Find the specific scene\n",
+        "    matching = [h for h in hrefs if SINGLE_SCENE_NAME in h]\n",
+        "    if matching:\n",
+        "        hrefs = [matching[0]]\n",
+        "        print(f\"\\n[SINGLE_SCENE_MODE] Using specific scene: {SINGLE_SCENE_NAME}\")\n",
+        "    elif hrefs:\n",
+        "        hrefs = [hrefs[0]]\n",
+        "        print(f\"\\n[SINGLE_SCENE_MODE] Specific scene not found, using first: {os.path.basename(hrefs[0])}\")\n",
         "elif hrefs:\n",
         "    print(f\"\\nTotal scenes to process: {len(hrefs)}\")"
       ]
