Update mask logic to exclude additional invalid pixel categories for improved accuracy in NDSI computation.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -215,8 +215,8 @@
         "    denom = green + swir\n",
         "    ndsi = (green - swir) / denom.where(denom != 0)\n",
         "    \n",
-        "    # Cloud mask: exclude Cloud Shadows (3), Cloud Medium (8), Cloud High (9)\n",
-        "    valid_mask = ~scl.isin([3, 8, 9])\n",
+        "    # Mask: exclude Nodata (0), Saturated (1), Cloud Shadows (3)[it can see snow even if there are cloud shadows], Water (6), Unclassified (7), Cloud Medium (8), Cloud High (9)\n",
+        "    valid_mask = ~scl.isin([0,1,6,7,8,9])\n",
         "    \n",
         "    # Snow classification (NDSI > 0.42 and valid pixel)\n",
         "    snow_mask = (ndsi > 0.42) & valid_mask\n",
