Enhance documentation and structure in the Iceland Snow and Ice Monitoring notebook, adding detailed explanations for workflow, known issues, and processing steps for NDSI and RGB visualization.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -6,7 +6,18 @@
       "source": [
         "# Iceland Snow and Ice Monitoring\n",
         "\n",
-        "This notebook implements a workflow for monitoring snow and ice in Iceland using Sentinel-2 data via the EOPF Zarr format."
+        "This notebook implements a workflow for monitoring snow and ice in Iceland using Sentinel-2 data via the EOPF Zarr format.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## DISCLAIMER: Known Issues\n",
+        "\n",
+        "**The native-like Alogrithm currently does not execute successfully due to memory constraints.**\n",
+        "\n",
+        "- The Sentinel-2 scenes from the EOPF Zarr store are extremely large (full scene extents)\n",
+        "- Even loading a single scene causes JupyterHub to crash due to insufficient memory\n",
+        "- The native-like workflow approach (loading full scenes instead of tiles) is not feasible in resource-constrained environments\n",
+        "---"
       ]
     },
     {
@@ -95,8 +106,18 @@
       "source": [
         "## STAC Search and Data Loading\n",
         "\n",
-        "This algorithm simulates a file-based workflow by processing full Sentinel-2 scenes (Sentinel-2 L2A) retrieved from the EOPF Zarr store. \n",
-        "It avoids tile-based optimization and instead loads the full scene extent to compute NDSI and classify snow."
+        "This section connects to the EOPF STAC catalog and searches for Sentinel-2 L2A scenes within a specified time range and bounding box.\n",
+        "\n",
+        "**What this code does:**\n",
+        "- Opens a connection to the EOPF STAC catalog (`stac.core.eopf.eodc.eu`)\n",
+        "- Searches for Sentinel-2 Level-2A products within the defined time range and AOI\n",
+        "- Filters out deprecated items and extracts product URLs (hrefs)\n",
+        "- In `SINGLE_SCENE_MODE`, selects a specific scene for testing\n",
+        "\n",
+        "**Algorithm approach:**\n",
+        "This algorithm simulates a **file-based workflow** by processing full Sentinel-2 scenes retrieved from the EOPF Zarr store. It avoids tile-based optimization and instead loads the full scene extent to compute NDSI and classify snow.\n",
+        "\n",
+        "> **Warning:** This approach is memory-intensive. Loading full scenes may exceed available RAM."
       ]
     },
     {
@@ -153,9 +174,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## File-Based Scene Processing\n",
+        "## File-Based Scene Processing (Native-Like Algorithm)\n",
         "\n",
-        "Load and process each Sentinel-2 scene individually. This simulates a file-based workflow where each scene is processed one at a time."
+        "### What is a \"Native-Like\" Workflow?\n",
+        "\n",
+        "In traditional satellite image processing, scientists download entire image files to their computer and process them locally. This is how algorithms were originally designed before cloud computing existed.\n",
+        "\n",
+        "**This notebook simulates that traditional approach:**\n",
+        "- We treat each Sentinel-2 scene as a complete \"file\" \n",
+        "- We load the full scene into memory\n",
+        "- We process it entirely before moving to the next scene\n",
+        "\n",
+        "This is in contrast to modern **tile-based** approaches where only small chunks of data are loaded as needed.\n",
+        "\n",
+        "### What happens in this section?\n",
+        "\n",
+        "1. **Load a scene** → Download the satellite image bands we need (Green and SWIR channels)\n",
+        "2. **Calculate snow index** → Apply the NDSI formula to identify snow/ice pixels\n",
+        "3. **Create a mask** → Mark which pixels are snow and which are not\n",
+        "\n",
+        "### Why doesn't it work?\n",
+        "\n",
+        "The Sentinel-2 scenes from the EOPF store are very large (hundreds of MB to GB per scene). When we try to load an entire scene into memory at once, JupyterHub runs out of RAM and crashes, even with just one scene.\n",
+        "\n",
+        "> **Bottom line:** This approach demonstrates the algorithm logic, but cannot actually run in resource-limited environments like our JupyterHub."
       ]
     },
     {
@@ -278,7 +320,18 @@
       "source": [
         "## Visualization: Stacked Scene Composite\n",
         "\n",
-        "Stack all processed scenes and compute median NDSI and aggregated snow mask for robust visualization."
+        "This section creates a composite from multiple processed scenes.\n",
+        "\n",
+        "**What this code does:**\n",
+        "- If multiple scenes were processed, it stacks them and computes the **median NDSI** (robust against outliers and clouds)\n",
+        "- Creates an aggregated snow mask based on the median NDSI threshold\n",
+        "- Calculates snow coverage statistics\n",
+        "\n",
+        "**Why use median?**\n",
+        "Using the median across multiple scenes helps to:\n",
+        "- Reduce noise from clouds that weren't fully masked\n",
+        "- Create a more stable snow/ice classification\n",
+        "- Fill gaps where individual scenes had invalid data"
       ]
     },
     {
@@ -353,6 +406,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### NDSI Visualization\n",
+        "\n",
+        "Creates a 2-panel diagnostic plot:\n",
+        "1. **Median NDSI Map** - Shows the spectral snow index values (-0.5 to 1.0). Green indicates snow/ice (high NDSI), red indicates bare ground/water (low NDSI).\n",
+        "2. **Binary Snow/Ice Mask** - Shows classified snow pixels where NDSI ≥ 0.42."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -404,9 +468,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## RGB Visualization (Separate Processing)\n",
+        "## RGB Visualization\n",
         "\n",
-        "This section loads RGB bands independently from the NDSI processing to avoid data interference."
+        "This section loads RGB bands **independently** from the NDSI processing to avoid data interference.\n",
+        "\n",
+        "**Why separate processing?**\n",
+        "- Keeps the NDSI data pipeline clean and unmodified\n",
+        "- RGB is only for visualization purposes\n",
+        "- Uses 60m resolution bands to minimize memory usage\n",
+        "\n",
+        "**What this code does:**\n",
+        "- Loads B02 (Blue), B03 (Green), B04 (Red) at 60m resolution\n",
+        "- Applies cloud masking using SCL\n",
+        "- Creates a median RGB composite across all scenes\n",
+        "- Applies percentile stretching for better visualization"
       ]
     },
     {
@@ -493,6 +568,17 @@
         "else:\n",
         "    rgb_composite = None\n",
         "    print(\"No scenes available for RGB processing.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### RGB vs Snow Mask Comparison\n",
+        "\n",
+        "Creates a side-by-side comparison:\n",
+        "1. **Median RGB Composite** - True color visualization of the scene(s) with 2-98% percentile stretch\n",
+        "2. **Snow/Ice Mask** - Binary classification overlaid for comparison with the visual appearance"
       ]
     },
     {
