Memory in GB instead of %

--- a/proxmox_visualization.ipynb
+++ b/proxmox_visualization.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e57caf47",
    "metadata": {},
    "outputs": [
@@ -61,15 +61,26 @@
     "samples['datetime'] = pd.to_datetime(samples['time_iso'])\n",
     "samples['elapsed_seconds'] = samples['time'] - samples['time'].iloc[0]\n",
     "\n",
+    "# Calculate memory in GB\n",
+    "samples['mem_gb'] = samples['mem'] / (1024**3)\n",
+    "samples['maxmem_gb'] = samples['maxmem'] / (1024**3)\n",
+    "\n",
+    "# Add memory stats in GB to data dict for later use\n",
+    "data['memory_stats']['min_gb'] = samples['mem_gb'].min()\n",
+    "data['memory_stats']['max_gb'] = samples['mem_gb'].max()\n",
+    "data['memory_stats']['avg_gb'] = samples['mem_gb'].mean()\n",
+    "data['memory_stats']['total_gb'] = samples['maxmem_gb'].iloc[0]\n",
+    "\n",
     "print(f\"Monitoring Period: {data['monitoring_period']['duration_formatted']}\")\n",
     "print(f\"Samples Collected: {data['samples_collected']}\")\n",
     "print(f\"Events Recorded: {data['events_recorded']}\")\n",
-    "print(f\"\\nTime Range: {samples['datetime'].iloc[0]} to {samples['datetime'].iloc[-1]}\")"
+    "print(f\"\\nTime Range: {samples['datetime'].iloc[0]} to {samples['datetime'].iloc[-1]}\")\n",
+    "print(f\"Total VM Memory: {data['memory_stats']['total_gb']:.2f} GB\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d41ce0b1",
    "metadata": {},
    "outputs": [
@@ -114,10 +125,10 @@
     "print(f\"   Max: {data['cpu_stats']['max_percent']:.2f}%\")\n",
     "print(f\"   Avg: {data['cpu_stats']['avg_percent']:.2f}%\")\n",
     "\n",
-    "print(f\"\\n💾 Memory Usage:\")\n",
-    "print(f\"   Min: {data['memory_stats']['min_percent']:.2f}%\")\n",
-    "print(f\"   Max: {data['memory_stats']['max_percent']:.2f}%\")\n",
-    "print(f\"   Avg: {data['memory_stats']['avg_percent']:.2f}%\")\n",
+    "print(f\"\\n💾 Memory Usage (Total: {data['memory_stats']['total_gb']:.2f} GB):\")\n",
+    "print(f\"   Min: {data['memory_stats']['min_gb']:.2f} GB\")\n",
+    "print(f\"   Max: {data['memory_stats']['max_gb']:.2f} GB\")\n",
+    "print(f\"   Avg: {data['memory_stats']['avg_gb']:.2f} GB\")\n",
     "\n",
     "print(f\"\\n🌐 Network Transfer:\")\n",
     "print(f\"   Downloaded: {data['network_transfer']['mb_in']:.2f} MB\")\n",
@@ -163,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "acb65e54",
    "metadata": {},
    "outputs": [
@@ -192,16 +203,17 @@
     "ax1.set_ylim(0, max(samples['cpu_percent']) * 1.1)\n",
     "ax1.grid(True, alpha=0.3)\n",
     "\n",
-    "# Memory Usage\n",
+    "# Memory Usage in GB\n",
     "ax2 = axes[1]\n",
-    "ax2.fill_between(samples['elapsed_seconds'], samples['mem_percent'], alpha=0.3, color='#6b8aff')\n",
-    "ax2.plot(samples['elapsed_seconds'], samples['mem_percent'], color='#6b8aff', linewidth=1)\n",
-    "ax2.axhline(y=data['memory_stats']['avg_percent'], color='#ff6b6b', linestyle='--', label=f\"Avg: {data['memory_stats']['avg_percent']:.1f}%\")\n",
-    "ax2.set_ylabel('Memory Usage (%)', fontsize=12)\n",
+    "ax2.fill_between(samples['elapsed_seconds'], samples['mem_gb'], alpha=0.3, color='#6b8aff')\n",
+    "ax2.plot(samples['elapsed_seconds'], samples['mem_gb'], color='#6b8aff', linewidth=1)\n",
+    "ax2.axhline(y=data['memory_stats']['avg_gb'], color='#ff6b6b', linestyle='--', label=f\"Avg: {data['memory_stats']['avg_gb']:.2f} GB\")\n",
+    "ax2.axhline(y=data['memory_stats']['total_gb'], color='#ffaa00', linestyle=':', alpha=0.5, label=f\"Total: {data['memory_stats']['total_gb']:.1f} GB\")\n",
+    "ax2.set_ylabel('Memory Usage (GB)', fontsize=12)\n",
     "ax2.set_xlabel('Elapsed Time (seconds)', fontsize=12)\n",
     "ax2.set_title('Memory Usage Over Time', fontsize=14, fontweight='bold')\n",
     "ax2.legend(loc='upper right')\n",
-    "ax2.set_ylim(0, max(samples['mem_percent']) * 1.2)\n",
+    "ax2.set_ylim(0, data['memory_stats']['total_gb'] * 1.1)\n",
     "ax2.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -396,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c7d407ff",
    "metadata": {},
    "outputs": [
@@ -422,12 +434,13 @@
     "ax1.set_title('CPU Usage', fontweight='bold')\n",
     "ax1.grid(True, alpha=0.3)\n",
     "\n",
-    "# Memory\n",
+    "# Memory in GB\n",
     "ax2 = axes[0, 1]\n",
-    "ax2.fill_between(samples['elapsed_seconds'], samples['mem_percent'], alpha=0.3, color='#6b8aff')\n",
-    "ax2.plot(samples['elapsed_seconds'], samples['mem_percent'], color='#6b8aff', linewidth=1)\n",
-    "ax2.set_ylabel('Memory (%)')\n",
-    "ax2.set_title('Memory Usage', fontweight='bold')\n",
+    "ax2.fill_between(samples['elapsed_seconds'], samples['mem_gb'], alpha=0.3, color='#6b8aff')\n",
+    "ax2.plot(samples['elapsed_seconds'], samples['mem_gb'], color='#6b8aff', linewidth=1)\n",
+    "ax2.axhline(y=data['memory_stats']['total_gb'], color='#ffaa00', linestyle=':', alpha=0.5)\n",
+    "ax2.set_ylabel('Memory (GB)')\n",
+    "ax2.set_title(f\"Memory Usage (Total: {data['memory_stats']['total_gb']:.1f} GB)\", fontweight='bold')\n",
     "ax2.grid(True, alpha=0.3)\n",
     "\n",
     "# Network\n",
@@ -465,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7e698216",
    "metadata": {},
    "outputs": [
@@ -502,14 +515,15 @@
     "\n",
     "# Analyze utilization\n",
     "avg_cpu = data['cpu_stats']['avg_percent']\n",
-    "avg_mem = data['memory_stats']['avg_percent']\n",
+    "avg_mem_gb = data['memory_stats']['avg_gb']\n",
+    "total_mem_gb = data['memory_stats']['total_gb']\n",
     "avg_net = data['network_transfer']['avg_speed_mbps_in']\n",
     "total_mb = data['network_transfer']['mb_in']\n",
     "duration = data['monitoring_period']['duration_seconds']\n",
     "\n",
     "print(f\"\\n🔍 Resource Utilization:\")\n",
     "print(f\"   CPU: {avg_cpu:.1f}% avg (max {data['cpu_stats']['max_percent']:.1f}%)\")\n",
-    "print(f\"   Memory: {avg_mem:.1f}% avg (max {data['memory_stats']['max_percent']:.1f}%)\")\n",
+    "print(f\"   Memory: {avg_mem_gb:.2f} GB avg / {total_mem_gb:.1f} GB total (max {data['memory_stats']['max_gb']:.2f} GB)\")\n",
     "print(f\"   Network: {avg_net:.1f} Mbps avg\")\n",
     "\n",
     "# Determine bottleneck\n",
@@ -750,6 +764,13 @@
     "    monitoring_data = []\n",
     "    for run in runs_with_monitoring:\n",
     "        mon = run['monitoring']\n",
+    "        samples_df = pd.DataFrame(mon['samples'])\n",
+    "        \n",
+    "        # Calculate memory in GB\n",
+    "        mem_min_gb = samples_df['mem'].min() / (1024**3)\n",
+    "        mem_max_gb = samples_df['mem'].max() / (1024**3)\n",
+    "        mem_avg_gb = samples_df['mem'].mean() / (1024**3)\n",
+    "        total_mem_gb = samples_df['maxmem'].iloc[0] / (1024**3)\n",
     "        \n",
     "        monitoring_data.append({\n",
     "            'Test Name': run['name'],\n",
@@ -757,8 +778,9 @@
     "            'Samples': mon['samples_collected'],\n",
     "            'Avg CPU %': round(mon['cpu_stats']['avg_percent'], 1),\n",
     "            'Max CPU %': round(mon['cpu_stats']['max_percent'], 1),\n",
-    "            'Avg Mem %': round(mon['memory_stats']['avg_percent'], 1),\n",
-    "            'Max Mem %': round(mon['memory_stats']['max_percent'], 1),\n",
+    "            'Avg Mem GB': round(mem_avg_gb, 2),\n",
+    "            'Max Mem GB': round(mem_max_gb, 2),\n",
+    "            'Total Mem GB': round(total_mem_gb, 1),\n",
     "            'Downloaded MB': round(mon['network_transfer']['mb_in'], 1),\n",
     "            'Avg DL Mbps': round(mon['network_transfer']['avg_speed_mbps_in'], 1),\n",
     "            'Disk Read MB': round(mon['disk_io']['mb_read'], 1),\n",
@@ -873,13 +895,13 @@
     "    ax1.legend()\n",
     "    ax1.grid(True, alpha=0.3, axis='y')\n",
     "    \n",
-    "    # Memory Usage comparison\n",
+    "    # Memory Usage comparison in GB\n",
     "    ax2 = axes[0, 1]\n",
-    "    avg_mem = [r['monitoring']['memory_stats']['avg_percent'] for r in runs_with_monitoring]\n",
-    "    max_mem = [r['monitoring']['memory_stats']['max_percent'] for r in runs_with_monitoring]\n",
-    "    ax2.bar(x - width/2, avg_mem, width, label='Average', color='#6b8aff', alpha=0.8)\n",
-    "    ax2.bar(x + width/2, max_mem, width, label='Maximum', color='#ffaa00', alpha=0.8)\n",
-    "    ax2.set_ylabel('Memory Usage (%)')\n",
+    "    avg_mem_gb = [pd.DataFrame(r['monitoring']['samples'])['mem'].mean() / (1024**3) for r in runs_with_monitoring]\n",
+    "    max_mem_gb = [pd.DataFrame(r['monitoring']['samples'])['mem'].max() / (1024**3) for r in runs_with_monitoring]\n",
+    "    ax2.bar(x - width/2, avg_mem_gb, width, label='Average', color='#6b8aff', alpha=0.8)\n",
+    "    ax2.bar(x + width/2, max_mem_gb, width, label='Maximum', color='#ffaa00', alpha=0.8)\n",
+    "    ax2.set_ylabel('Memory Usage (GB)')\n",
     "    ax2.set_title('Memory Usage Comparison', fontweight='bold')\n",
     "    ax2.set_xticks(x)\n",
     "    ax2.set_xticklabels(names, rotation=45, ha='right')\n",
@@ -1026,6 +1048,9 @@
     "        samples_df = pd.DataFrame(mon['samples'])\n",
     "        samples_df['elapsed_seconds'] = samples_df['time'] - samples_df['time'].iloc[0]\n",
     "        \n",
+    "        # Calculate memory in GB\n",
+    "        samples_df['mem_gb'] = samples_df['mem'] / (1024**3)\n",
+    "        \n",
     "        # Calculate rates\n",
     "        samples_df['netin_rate'] = samples_df['netin'].diff() / samples_df['time'].diff()\n",
     "        samples_df['netin_mbps'] = samples_df['netin_rate'] * 8 / 1e6\n",
@@ -1043,8 +1068,8 @@
     "        axes[0, 0].plot(samples_df['time_pct'], samples_df['cpu_percent'], \n",
     "                       label=label, color=color, linewidth=1.5, alpha=0.8)\n",
     "        \n",
-    "        # Memory over time\n",
-    "        axes[0, 1].plot(samples_df['time_pct'], samples_df['mem_percent'], \n",
+    "        # Memory over time in GB\n",
+    "        axes[0, 1].plot(samples_df['time_pct'], samples_df['mem_gb'], \n",
     "                       label=label, color=color, linewidth=1.5, alpha=0.8)\n",
     "        \n",
     "        # Network speed over time\n",
@@ -1064,7 +1089,7 @@
     "    axes[0, 0].grid(True, alpha=0.3)\n",
     "    axes[0, 0].set_xlabel('Progress (%)')\n",
     "    \n",
-    "    axes[0, 1].set_ylabel('Memory Usage (%)')\n",
+    "    axes[0, 1].set_ylabel('Memory Usage (GB)')\n",
     "    axes[0, 1].set_title('Memory Usage Over Time', fontweight='bold')\n",
     "    axes[0, 1].legend(loc='upper right', fontsize=8)\n",
     "    axes[0, 1].grid(True, alpha=0.3)\n",
