testing ifferent scene for new time

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -128,7 +128,7 @@
       "source": [
         "# === Configuration ===\n",
         "SINGLE_SCENE_MODE = True  # Toggle: True = specific scene, False = all scenes\n",
-        "SINGLE_SCENE_NAME = \"S2B_MSIL2A_20250729T124259_N0511_R095_T28WES_20250729T162501.zarr\"\n",
+        "SINGLE_SCENE_NAME = \"S2B_MSIL2A_20250730T131259_N0511_R081_T26VPR_20250730T150901.zarr\"\n",
         "    \n",
         "# STAC Search\n",
         "catalog = pystac_client.Client.open(\"https://stac.core.eopf.eodc.eu\")\n",
@@ -174,7 +174,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## File-Based Scene Processing (Native-Like Algorithm)\n",
+        "## Native-Like Scene Processing\n",
         "\n",
         "### What is a \"Native-Like\" Workflow?\n",
         "\n",
