Add interactive map feature to visualize Sentinel-2 scene locations with bounding boxes and glacier seed points

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -636,6 +636,171 @@
         "else:\n",
         "    print(\"RGB or NDSI composite missing. Run processing cells first.\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Interactive Map: Scene Locations\n",
+        "\n",
+        "This section creates an interactive map showing the bounding boxes of all available Sentinel-2 scenes over Iceland.\n",
+        "\n",
+        "**Features:**\n",
+        "- Satellite imagery background (OpenStreetMap tiles)\n",
+        "- Bounding boxes of each scene displayed as polygons\n",
+        "- Seed points (glacier locations) shown as markers\n",
+        "- Click on features for more information"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ======================================================================\n",
+        "# Interactive Map with MapLibre\n",
+        "# ======================================================================\n",
+        "# Shows scene bounding boxes on a satellite background\n",
+        "\n",
+        "import maplibre\n",
+        "from maplibre import Layer, LayerType\n",
+        "from maplibre.sources import GeoJSONSource\n",
+        "from maplibre.controls import NavigationControl, ScaleControl\n",
+        "\n",
+        "# Create GeoDataFrame with scene bounding boxes\n",
+        "scene_bboxes = []\n",
+        "for item in valid_items:\n",
+        "    bbox = item.bbox  # [west, south, east, north]\n",
+        "    scene_polygon = box(bbox[0], bbox[1], bbox[2], bbox[3])\n",
+        "    scene_bboxes.append({\n",
+        "        \"geometry\": scene_polygon,\n",
+        "        \"scene_id\": item.id,\n",
+        "        \"datetime\": item.datetime.strftime(\"%Y-%m-%d %H:%M\") if item.datetime else \"N/A\",\n",
+        "        \"cloud_cover\": item.properties.get(\"eo:cloud_cover\", \"N/A\")\n",
+        "    })\n",
+        "\n",
+        "scenes_gdf = gpd.GeoDataFrame(scene_bboxes, crs=\"EPSG:4326\")\n",
+        "\n",
+        "# Calculate map center from AOI\n",
+        "center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
+        "center_lat = (bbox_4326[1] + bbox_4326[3]) / 2\n",
+        "\n",
+        "# Satellite basemap style (using Esri World Imagery via custom style)\n",
+        "satellite_style = {\n",
+        "    \"version\": 8,\n",
+        "    \"sources\": {\n",
+        "        \"esri-satellite\": {\n",
+        "            \"type\": \"raster\",\n",
+        "            \"tiles\": [\n",
+        "                \"https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}\"\n",
+        "            ],\n",
+        "            \"tileSize\": 256,\n",
+        "            \"attribution\": \"Esri, Maxar, Earthstar Geographics\"\n",
+        "        }\n",
+        "    },\n",
+        "    \"layers\": [\n",
+        "        {\n",
+        "            \"id\": \"satellite-layer\",\n",
+        "            \"type\": \"raster\",\n",
+        "            \"source\": \"esri-satellite\",\n",
+        "            \"minzoom\": 0,\n",
+        "            \"maxzoom\": 22\n",
+        "        }\n",
+        "    ]\n",
+        "}\n",
+        "\n",
+        "# Create the map with satellite background\n",
+        "m = maplibre.Map(\n",
+        "    center=[center_lon, center_lat],\n",
+        "    zoom=6,\n",
+        "    style=satellite_style,\n",
+        "    height=600\n",
+        ")\n",
+        "\n",
+        "# Add navigation controls\n",
+        "m.add_control(NavigationControl())\n",
+        "m.add_control(ScaleControl())\n",
+        "\n",
+        "# Add scene bounding boxes as a layer\n",
+        "m.add_source(\n",
+        "    \"scenes\",\n",
+        "    GeoJSONSource(data=scenes_gdf.__geo_interface__)\n",
+        ")\n",
+        "\n",
+        "m.add_layer(\n",
+        "    Layer(\n",
+        "        id=\"scene-fills\",\n",
+        "        type=LayerType.FILL,\n",
+        "        source=\"scenes\",\n",
+        "        paint={\n",
+        "            \"fill-color\": \"#3388ff\",\n",
+        "            \"fill-opacity\": 0.2\n",
+        "        }\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "m.add_layer(\n",
+        "    Layer(\n",
+        "        id=\"scene-borders\",\n",
+        "        type=LayerType.LINE,\n",
+        "        source=\"scenes\",\n",
+        "        paint={\n",
+        "            \"line-color\": \"#3388ff\",\n",
+        "            \"line-width\": 2\n",
+        "        }\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "# Add seed points\n",
+        "m.add_source(\n",
+        "    \"seeds\",\n",
+        "    GeoJSONSource(data=seeds_gdf.__geo_interface__)\n",
+        ")\n",
+        "\n",
+        "m.add_layer(\n",
+        "    Layer(\n",
+        "        id=\"seed-points\",\n",
+        "        type=LayerType.CIRCLE,\n",
+        "        source=\"seeds\",\n",
+        "        paint={\n",
+        "            \"circle-radius\": 5,\n",
+        "            \"circle-color\": \"#ff0000\",\n",
+        "            \"circle-stroke-width\": 1,\n",
+        "            \"circle-stroke-color\": \"#ffffff\"\n",
+        "        }\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "# Add AOI bounding box\n",
+        "aoi_polygon = box(bbox_4326[0], bbox_4326[1], bbox_4326[2], bbox_4326[3])\n",
+        "aoi_gdf = gpd.GeoDataFrame([{\"geometry\": aoi_polygon, \"name\": \"AOI\"}], crs=\"EPSG:4326\")\n",
+        "\n",
+        "m.add_source(\n",
+        "    \"aoi\",\n",
+        "    GeoJSONSource(data=aoi_gdf.__geo_interface__)\n",
+        ")\n",
+        "\n",
+        "m.add_layer(\n",
+        "    Layer(\n",
+        "        id=\"aoi-border\",\n",
+        "        type=LayerType.LINE,\n",
+        "        source=\"aoi\",\n",
+        "        paint={\n",
+        "            \"line-color\": \"#ff6600\",\n",
+        "            \"line-width\": 3,\n",
+        "            \"line-dasharray\": [3, 2]\n",
+        "        }\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "print(f\"Map shows {len(scenes_gdf)} scene bounding boxes\")\n",
+        "print(f\"  - Blue polygons: Sentinel-2 scene extents\")\n",
+        "print(f\"  - Red points: Glacier seed locations\")\n",
+        "print(f\"  - Orange dashed line: Area of Interest (AOI)\")\n",
+        "\n",
+        "m"
+      ]
     }
   ],
   "metadata": {
