--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -42,7 +42,11 @@
         "from pyproj import Transformer\n",
         "import dask\n",
         "import warnings\n",
-        "from concurrent.futures import ThreadPoolExecutor, as_completed"
+        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+        "\n",
+        "# Install maplibre for interactive maps (if not already installed)\n",
+        "import subprocess\n",
+        "subprocess.run([\"pip\", \"install\", \"-q\", \"maplibre\"], check=True)"
       ]
     },
     {
@@ -659,14 +663,13 @@
       "outputs": [],
       "source": [
         "# ======================================================================\n",
-        "# Interactive Map with MapLibre\n",
+        "# Interactive Map with Folium\n",
         "# ======================================================================\n",
         "# Shows scene bounding boxes on a satellite background\n",
         "\n",
-        "import maplibre\n",
-        "from maplibre import Layer, LayerType\n",
-        "from maplibre.sources import GeoJSONSource\n",
-        "from maplibre.controls import NavigationControl, ScaleControl\n",
+        "import folium\n",
+        "from folium import GeoJson, Marker\n",
+        "from folium.plugins import Fullscreen\n",
         "\n",
         "# Create GeoDataFrame with scene bounding boxes\n",
         "scene_bboxes = []\n",
@@ -686,116 +689,71 @@
         "center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
         "center_lat = (bbox_4326[1] + bbox_4326[3]) / 2\n",
         "\n",
-        "# Satellite basemap style (using Esri World Imagery via custom style)\n",
-        "satellite_style = {\n",
-        "    \"version\": 8,\n",
-        "    \"sources\": {\n",
-        "        \"esri-satellite\": {\n",
-        "            \"type\": \"raster\",\n",
-        "            \"tiles\": [\n",
-        "                \"https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}\"\n",
-        "            ],\n",
-        "            \"tileSize\": 256,\n",
-        "            \"attribution\": \"Esri, Maxar, Earthstar Geographics\"\n",
-        "        }\n",
+        "# Create map with Esri satellite tiles\n",
+        "m = folium.Map(\n",
+        "    location=[center_lat, center_lon],\n",
+        "    zoom_start=6,\n",
+        "    tiles=None  # We'll add custom tiles\n",
+        ")\n",
+        "\n",
+        "# Add Esri World Imagery as satellite basemap\n",
+        "folium.TileLayer(\n",
+        "    tiles=\"https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}\",\n",
+        "    attr=\"Esri, Maxar, Earthstar Geographics\",\n",
+        "    name=\"Satellite\",\n",
+        "    overlay=False\n",
+        ").add_to(m)\n",
+        "\n",
+        "# Add scene bounding boxes\n",
+        "GeoJson(\n",
+        "    scenes_gdf.__geo_interface__,\n",
+        "    name=\"Sentinel-2 Scenes\",\n",
+        "    style_function=lambda x: {\n",
+        "        \"fillColor\": \"#3388ff\",\n",
+        "        \"color\": \"#3388ff\",\n",
+        "        \"weight\": 2,\n",
+        "        \"fillOpacity\": 0.2\n",
         "    },\n",
-        "    \"layers\": [\n",
-        "        {\n",
-        "            \"id\": \"satellite-layer\",\n",
-        "            \"type\": \"raster\",\n",
-        "            \"source\": \"esri-satellite\",\n",
-        "            \"minzoom\": 0,\n",
-        "            \"maxzoom\": 22\n",
-        "        }\n",
-        "    ]\n",
-        "}\n",
-        "\n",
-        "# Create the map with satellite background\n",
-        "m = maplibre.Map(\n",
-        "    center=[center_lon, center_lat],\n",
-        "    zoom=6,\n",
-        "    style=satellite_style,\n",
-        "    height=600\n",
-        ")\n",
-        "\n",
-        "# Add navigation controls\n",
-        "m.add_control(NavigationControl())\n",
-        "m.add_control(ScaleControl())\n",
-        "\n",
-        "# Add scene bounding boxes as a layer\n",
-        "m.add_source(\n",
-        "    \"scenes\",\n",
-        "    GeoJSONSource(data=scenes_gdf.__geo_interface__)\n",
-        ")\n",
-        "\n",
-        "m.add_layer(\n",
-        "    Layer(\n",
-        "        id=\"scene-fills\",\n",
-        "        type=LayerType.FILL,\n",
-        "        source=\"scenes\",\n",
-        "        paint={\n",
-        "            \"fill-color\": \"#3388ff\",\n",
-        "            \"fill-opacity\": 0.2\n",
-        "        }\n",
+        "    tooltip=folium.GeoJsonTooltip(\n",
+        "        fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
+        "        aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
+        "        localize=True\n",
         "    )\n",
-        ")\n",
-        "\n",
-        "m.add_layer(\n",
-        "    Layer(\n",
-        "        id=\"scene-borders\",\n",
-        "        type=LayerType.LINE,\n",
-        "        source=\"scenes\",\n",
-        "        paint={\n",
-        "            \"line-color\": \"#3388ff\",\n",
-        "            \"line-width\": 2\n",
-        "        }\n",
-        "    )\n",
-        ")\n",
+        ").add_to(m)\n",
         "\n",
         "# Add seed points\n",
-        "m.add_source(\n",
-        "    \"seeds\",\n",
-        "    GeoJSONSource(data=seeds_gdf.__geo_interface__)\n",
-        ")\n",
-        "\n",
-        "m.add_layer(\n",
-        "    Layer(\n",
-        "        id=\"seed-points\",\n",
-        "        type=LayerType.CIRCLE,\n",
-        "        source=\"seeds\",\n",
-        "        paint={\n",
-        "            \"circle-radius\": 5,\n",
-        "            \"circle-color\": \"#ff0000\",\n",
-        "            \"circle-stroke-width\": 1,\n",
-        "            \"circle-stroke-color\": \"#ffffff\"\n",
-        "        }\n",
-        "    )\n",
-        ")\n",
+        "for idx, row in seeds_gdf.iterrows():\n",
+        "    folium.CircleMarker(\n",
+        "        location=[row.geometry.y, row.geometry.x],\n",
+        "        radius=5,\n",
+        "        color=\"#ffffff\",\n",
+        "        fill=True,\n",
+        "        fillColor=\"#ff0000\",\n",
+        "        fillOpacity=1.0,\n",
+        "        weight=1\n",
+        "    ).add_to(m)\n",
         "\n",
         "# Add AOI bounding box\n",
         "aoi_polygon = box(bbox_4326[0], bbox_4326[1], bbox_4326[2], bbox_4326[3])\n",
         "aoi_gdf = gpd.GeoDataFrame([{\"geometry\": aoi_polygon, \"name\": \"AOI\"}], crs=\"EPSG:4326\")\n",
         "\n",
-        "m.add_source(\n",
-        "    \"aoi\",\n",
-        "    GeoJSONSource(data=aoi_gdf.__geo_interface__)\n",
-        ")\n",
+        "GeoJson(\n",
+        "    aoi_gdf.__geo_interface__,\n",
+        "    name=\"Area of Interest\",\n",
+        "    style_function=lambda x: {\n",
+        "        \"fillColor\": \"transparent\",\n",
+        "        \"color\": \"#ff6600\",\n",
+        "        \"weight\": 3,\n",
+        "        \"dashArray\": \"10, 5\"\n",
+        "    }\n",
+        ").add_to(m)\n",
         "\n",
-        "m.add_layer(\n",
-        "    Layer(\n",
-        "        id=\"aoi-border\",\n",
-        "        type=LayerType.LINE,\n",
-        "        source=\"aoi\",\n",
-        "        paint={\n",
-        "            \"line-color\": \"#ff6600\",\n",
-        "            \"line-width\": 3,\n",
-        "            \"line-dasharray\": [3, 2]\n",
-        "        }\n",
-        "    )\n",
-        ")\n",
+        "# Add layer control and fullscreen button\n",
+        "folium.LayerControl().add_to(m)\n",
+        "Fullscreen().add_to(m)\n",
         "\n",
         "print(f\"Map shows {len(scenes_gdf)} scene bounding boxes\")\n",
-        "print(f\"  - Blue polygons: Sentinel-2 scene extents\")\n",
+        "print(f\"  - Blue polygons: Sentinel-2 scene extents (hover for details)\")\n",
         "print(f\"  - Red points: Glacier seed locations\")\n",
         "print(f\"  - Orange dashed line: Area of Interest (AOI)\")\n",
         "\n",
