Enhance interactive map functionality to highlight selected scenes in SINGLE_SCENE_MODE and improve scene bounding box display

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -666,6 +666,7 @@
         "# Interactive Map with Folium\n",
         "# ======================================================================\n",
         "# Shows scene bounding boxes on a satellite background\n",
+        "# Highlights the selected scene in SINGLE_SCENE_MODE\n",
         "\n",
         "import folium\n",
         "from folium import GeoJson, Marker\n",
@@ -676,14 +677,27 @@
         "for item in valid_items:\n",
         "    bbox = item.bbox  # [west, south, east, north]\n",
         "    scene_polygon = box(bbox[0], bbox[1], bbox[2], bbox[3])\n",
+        "    \n",
+        "    # Check if this is the selected scene in SINGLE_SCENE_MODE\n",
+        "    is_selected = SINGLE_SCENE_MODE and SINGLE_SCENE_NAME in item.id\n",
+        "    \n",
         "    scene_bboxes.append({\n",
         "        \"geometry\": scene_polygon,\n",
         "        \"scene_id\": item.id,\n",
         "        \"datetime\": item.datetime.strftime(\"%Y-%m-%d %H:%M\") if item.datetime else \"N/A\",\n",
-        "        \"cloud_cover\": item.properties.get(\"eo:cloud_cover\", \"N/A\")\n",
+        "        \"cloud_cover\": item.properties.get(\"eo:cloud_cover\", \"N/A\"),\n",
+        "        \"is_selected\": is_selected\n",
         "    })\n",
         "\n",
         "scenes_gdf = gpd.GeoDataFrame(scene_bboxes, crs=\"EPSG:4326\")\n",
+        "\n",
+        "# Separate selected scene from others\n",
+        "if SINGLE_SCENE_MODE:\n",
+        "    selected_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == True]\n",
+        "    other_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == False]\n",
+        "else:\n",
+        "    selected_gdf = gpd.GeoDataFrame()\n",
+        "    other_gdf = scenes_gdf\n",
         "\n",
         "# Calculate map center from AOI\n",
         "center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
@@ -704,22 +718,41 @@
         "    overlay=False\n",
         ").add_to(m)\n",
         "\n",
-        "# Add scene bounding boxes\n",
-        "GeoJson(\n",
-        "    scenes_gdf.__geo_interface__,\n",
-        "    name=\"Sentinel-2 Scenes\",\n",
-        "    style_function=lambda x: {\n",
-        "        \"fillColor\": \"#3388ff\",\n",
-        "        \"color\": \"#3388ff\",\n",
-        "        \"weight\": 2,\n",
-        "        \"fillOpacity\": 0.2\n",
-        "    },\n",
-        "    tooltip=folium.GeoJsonTooltip(\n",
-        "        fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
-        "        aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
-        "        localize=True\n",
-        "    )\n",
-        ").add_to(m)\n",
+        "# Add other scene bounding boxes (not selected) in blue\n",
+        "if len(other_gdf) > 0:\n",
+        "    GeoJson(\n",
+        "        other_gdf.__geo_interface__,\n",
+        "        name=\"Other Sentinel-2 Scenes\",\n",
+        "        style_function=lambda x: {\n",
+        "            \"fillColor\": \"#3388ff\",\n",
+        "            \"color\": \"#3388ff\",\n",
+        "            \"weight\": 2,\n",
+        "            \"fillOpacity\": 0.15\n",
+        "        },\n",
+        "        tooltip=folium.GeoJsonTooltip(\n",
+        "            fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
+        "            aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
+        "            localize=True\n",
+        "        )\n",
+        "    ).add_to(m)\n",
+        "\n",
+        "# Add selected scene bounding box in green with thicker border\n",
+        "if SINGLE_SCENE_MODE and len(selected_gdf) > 0:\n",
+        "    GeoJson(\n",
+        "        selected_gdf.__geo_interface__,\n",
+        "        name=\"Selected Scene (Active)\",\n",
+        "        style_function=lambda x: {\n",
+        "            \"fillColor\": \"#00ff00\",\n",
+        "            \"color\": \"#00ff00\",\n",
+        "            \"weight\": 4,\n",
+        "            \"fillOpacity\": 0.3\n",
+        "        },\n",
+        "        tooltip=folium.GeoJsonTooltip(\n",
+        "            fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
+        "            aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
+        "            localize=True\n",
+        "        )\n",
+        "    ).add_to(m)\n",
         "\n",
         "# Add seed points\n",
         "for idx, row in seeds_gdf.iterrows():\n",
@@ -752,8 +785,13 @@
         "folium.LayerControl().add_to(m)\n",
         "Fullscreen().add_to(m)\n",
         "\n",
+        "# Print legend\n",
         "print(f\"Map shows {len(scenes_gdf)} scene bounding boxes\")\n",
-        "print(f\"  - Blue polygons: Sentinel-2 scene extents (hover for details)\")\n",
+        "if SINGLE_SCENE_MODE and len(selected_gdf) > 0:\n",
+        "    print(f\"  - GREEN polygon: Selected scene ({SINGLE_SCENE_NAME})\")\n",
+        "    print(f\"  - Blue polygons: Other available scenes ({len(other_gdf)} scenes)\")\n",
+        "else:\n",
+        "    print(f\"  - Blue polygons: Sentinel-2 scene extents (hover for details)\")\n",
         "print(f\"  - Red points: Glacier seed locations\")\n",
         "print(f\"  - Orange dashed line: Area of Interest (AOI)\")\n",
         "\n",
